add and edit file new

--- a/src/styles/quasar.scss
+++ b/src/styles/quasar.scss
@@ -75,3 +75,37 @@ a:hover {
   }
 }
 
+.q-font-8{
+  font-size: 8px;
+}
+.q-font-9{
+  font-size: 9px;
+}
+.q-font-10{
+  font-size: 10px;
+}
+.q-font-11{
+  font-size: 11px;
+}
+.q-font-12{
+  font-size: 12px;
+}
+.q-font-13{
+  font-size: 13px;
+}
+.q-font-14{
+  font-size: 14px;
+}
+.q-font-15{
+  font-size: 15px;
+}
+.q-font-16{
+  font-size: 16px;
+}
+.q-font-17{
+  font-size: 17px;
+}
+.q-font-18{
+  font-size: 18px;
+}
+
