--- a/src/styles/quasar.scss
+++ b/src/styles/quasar.scss
@@ -108,4 +108,34 @@ a:hover {
 .q-font-18{
   font-size: 18px;
 }
+.q-font-19{
+  font-size: 19px;
+}
+.q-font-20{
+  font-size: 20px;
+}
+.q-font-21{
+  font-size: 21px;
+}
+.q-font-22{
+  font-size: 22px;
+}
+.q-font-23{
+  font-size: 23px;
+}
+.q-font-24{
+  font-size: 24px;
+}
+.q-font-25{
+  font-size: 25px;
+}
+.q-font-26{
+  font-size: 26px;
+}
+.q-font-27{
+  font-size: 27px;
+}
+.q-font-28{
+  font-size: 28px;
+}
 
