--- a/src/styles/quasar.scss
+++ b/src/styles/quasar.scss
@@ -145,4 +145,16 @@ a:hover {
   font-size: 30px;
 }
 
+.bg-img-individual {
+  margin-top: -15px;
+  background-image: url('/assets/img/bg-indivudual.png');
+  /* Full height */
+  height: 100%; 
+
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
 
