--- a/src/styles/quasar.scss
+++ b/src/styles/quasar.scss
@@ -157,8 +157,12 @@ a:hover {
   background-size: cover;
 }
 
-text-lvbdigibank {
+.text-lvbdigibank {
   color: #17479b !important;
+}
+
+.spacepartonhome {
+  margin-top: 20px;
 }
 
 
