--- a/src/styles/quasar.scss
+++ b/src/styles/quasar.scss
@@ -166,8 +166,15 @@ a:hover {
 }
 
 .cls-dorkjumpa {
-  margin-left: -30px;
-  margin-right: 6px;
+  margin-left: -25px;
+  margin-right: 0px;
+  color: red;
+}
+
+.cls-dorkjumpa-part2 {
+  margin-left: -25px;
+  margin-right: 8px;
+  color: red;
 }
 
 
